🐛🖼 Fix navbar bug (there can be too much items for some settings)

--- a/themes/default/public/css/lufi.css
+++ b/themes/default/public/css/lufi.css
@@ -223,6 +223,31 @@ button.pulse {
 .small-h1 {
     font-size: 2.2rem;
 }
+
+@media only screen and (max-width: 1800px) {
+  ul.hide-on-med-and-down {
+    display: none !important;
+  }
+  nav a.button-collapse {
+    display: block !important;
+  }
+  nav .brand-logo {
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  nav .brand-logo.left, nav .brand-logo.right {
+    padding: 0;
+    transform: none;
+  }
+  nav .brand-logo.left {
+    left: 0.5rem;
+  }
+  nav .brand-logo.right {
+    right: 0.5rem;
+    left: auto;
+  }
+}
+
 .white-background {
     background-color: #FFF;
 }
